# bydist

./: .gitmodules  bydist.cmake  bydist_gateway.cmake  version.txt
cmake/: bydist__configure_and_build.cmake  bydist__option__build_dependencies.cmake  configure_and_build.cmake
examples/all/: CMakeLists.txt
